[project]
name = "finance-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinicius Almeida Prado",email = "pradovncs@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dash (>=3.1.1,<4.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
